--- a/README.Rmd
+++ b/README.Rmd
@@ -6,6 +6,8 @@ output:
     number_sections: false
 ---
 
+This branch is used for simulation purpose. The difference between this branch and the main branch is that in this simulation branch, if there is only one algorithm used in SuperLearner, then the algorithm is forced to get weight 1 whereas by default, the algorithm will get a weight of either 1 or 0. We forced the weight to be 1 such that in simulation-4 of the paper, the prediction is fully from the random forest algorithm.
+
 This package is built for estimating the Average Causal Effect (ACE) in graphical models with unmeasured variables. This package is an implementation of the proposed estimators by \red{XXX}, based on the theory of influence functions and targeted minimum loss based estimation (TMLE).
 
 
@@ -32,6 +34,7 @@ The source code for `ADMGtmle` package is available on GitHub at [ADMEtmle](http
 The main function in this package is `ADMGtmle()`, which estimates the Average Causal Effect (ACE) using both TMLE esetimator and onestep estimator in graphical models with unmeasured variables. To get a flavor of how to use this package, we provide a quick example below:
 
 ```{r, quick-start, warning=F, message=F}
+
 library(ADMGtmle) # load the package
 head(data_fig_4a) # take a glance of the data, which is a simulated dataset under above figure (a).
 
@@ -39,7 +42,7 @@ est <- ADMGtmle(a=c(1,0),data=data_fig_4a, vertices=c('A','M','L','Y','X'),
                 bi_edges=list(c('A','Y')),
                 di_edges=list(c('X','A'), c('X','M'), c('X','L'),c('X','Y'), c('M','Y'), c('A','M'), c('A','L'), c('M','L'), c('L','Y')),
                 treatment='A', outcome='Y',
-                multivariate.variables = list(M=c('M1','M2')))
+                multivariate.variables = list(M=c('M.1','M.2')))
 ```
 
 The code above estimates the ACE of treatment $A$ on outcome $Y$, defined as $E(Y^1)-E(Y^0)$, using the data `data_fig_4a` generated based on Figure (a). The function `ADMGtmle()` takes the following arguments:
