--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,10 @@ output:
 This package is built for estimating the Average Causal Effect (ACE) in graphical models with unmeasured variables. This package is an implementation of the proposed estimators by \red{XXX}, based on the theory of influence functions and targeted minimum loss based estimation (TMLE).
 
 
+![](pkg.jpg)
+
+
+
 If you find this package useful, please cite:
 ```{r, eval = FALSE, citation}
 print("placeholder")
@@ -39,7 +43,7 @@ est <- ADMGtmle(a=c(1,0),data=data_fig_4a, vertices=c('A','M','L','Y','X'),
                 bi_edges=list(c('A','Y')),
                 di_edges=list(c('X','A'), c('X','M'), c('X','L'),c('X','Y'), c('M','Y'), c('A','M'), c('A','L'), c('M','L'), c('L','Y')),
                 treatment='A', outcome='Y',
-                multivariate.variables = list(M=c('M1','M2')))
+                multivariate.variables = list(M=c('M.1','M.2')))
 ```
 
 The code above estimates the ACE of treatment $A$ on outcome $Y$, defined as $E(Y^1)-E(Y^0)$, using the data `data_fig_4a` generated based on Figure (a). The function `ADMGtmle()` takes the following arguments:
