--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ To install, run the following code in terminal:
 
 ```{bash, eval = FALSE}
 # install the devtools package first if it's not yet installed
-devtools::install_github("annaguo-bios/ADMGtmle")
+devtools::install_github("annaguo-bios/flexCausal")
 ```
 
 The source code for `ADMGtmle` package is available on GitHub at [ADMEtmle](https://github.com/annaguo-bios/ADMGtmle/tree/main).
@@ -36,7 +36,7 @@ The source code for `ADMGtmle` package is available on GitHub at [ADMEtmle](http
 The main function in this package is `ADMGtmle()`, which estimates the Average Causal Effect (ACE) using both TMLE esetimator and onestep estimator in graphical models with unmeasured variables. To get a flavor of how to use this package, we provide a quick example below:
 
 ```{r, quick-start, warning=F, message=F}
-library(ADMGtmle) # load the package
+library(flexCausal) # load the package
 head(data_fig_4a) # take a glance of the data, which is a simulated dataset under above figure (a).
 
 est <- ADMGtmle(a=c(1,0),data=data_fig_4a, vertices=c('A','M','L','Y','X'),
