--- a/README.Rmd
+++ b/README.Rmd
@@ -35,9 +35,14 @@ The source code for `flexCausal` package is available on GitHub at [flexCausal](
 # Quick Start
 The main function in this package is `ADMGtmle()`, which estimates the Average Causal Effect (ACE) using both TMLE esetimator and onestep estimator in graphical models with unmeasured variables. To get a flavor of how to use this package, we provide a quick example below:
 
-```{r, quick-start, warning=F, message=F}
+```{r, load-pkg, warning=F, message=F}
+
 library(flexCausal) # load the package
 head(data_fig_4a) # take a glance of the data, which is a simulated dataset under above figure (a).
+
+```
+
+```{r, quick-start, warning=F, message=T}
 
 est <- ADMGtmle(a=c(1,0),data=data_fig_4a, vertices=c('A','M','L','Y','X'),
                 bi_edges=list(c('A','Y')),
