--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output:
     number_sections: true
 ---
 
-This package is built for estimating the Average Causal Effect (ACE) in graphical models with unmeasured variables. This package is an implementation of the proposed estimators by \red{XXX}, based on the theory of influence functions and targeted minimum loss based estimation (TMLE).
+This package is built for estimating the Average Causal Effect (ACE) in graphical models with unmeasured variables. This package is an implementation of the proposed estimators by [this paper](http://www.arxiv.org/pdf/2409.03962), based on the theory of influence functions and targeted minimum loss based estimation (TMLE).
 
 
 ![](pkg.jpg)
@@ -14,8 +14,13 @@ This package is built for estimating the Average Causal Effect (ACE) in graphica
 
 
 If you find this package useful, please cite: [this paper](http://www.arxiv.org/pdf/2409.03962)
-```{r, eval = FALSE, citation}
-## placeholder for citation
+```{r, eval=FALSE, citation}
+@article{guo2024average,
+  title={Average Causal Effect Estimation in DAGs with Hidden Variables: Extensions of Back-Door and Front-Door Criteria},
+  author={Guo, Anna and Nabi, Razieh},
+  journal={arXiv preprint arXiv:2409.03962},
+  year={2024}
+}
 ```
 
 Graphical models with unmeasured variables can be depicted via the Acyclic Directed Mixed Graphs (ADMG). For example, consider the following ADMG, where $A$  is the treatment variable and $Y$ is the outcome variable:
