--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -33,20 +33,20 @@ The main function in this package is `ADMGtmle()`, which estimates the Average C
 ```{r, load-pkg, warning=F, message=F}
 
 library(flexCausal) # load the package
-head(data_fig_4a) # take a glance of the data, which is a simulated dataset under above figure (a).
+head(data_example_a) # take a glance of the data, which is a simulated dataset under above figure (a).
 
 ```
 
 ```{r, quick-start, warning=F, message=T}
 
-est <- ADMGtmle(a=c(1,0),data=data_fig_4a, vertices=c('A','M','L','Y','X'),
+est <- ADMGtmle(a=c(1,0),data=data_example_a, vertices=c('A','M','L','Y','X'),
                 bi_edges=list(c('A','Y')),
                 di_edges=list(c('X','A'), c('X','M'), c('X','L'),c('X','Y'), c('M','Y'), c('A','M'), c('A','L'), c('M','L'), c('L','Y')),
                 treatment='A', outcome='Y',
                 multivariate.variables = list(M=c('M.1','M.2')))
 ```
 
-The code above estimates the ACE of treatment $A$ on outcome $Y$, defined as $E(Y^1)-E(Y^0)$, using the data `data_fig_4a` generated based on Figure (a). The function `ADMGtmle()` takes the following arguments:
+The code above estimates the ACE of treatment $A$ on outcome $Y$, defined as $E(Y^1)-E(Y^0)$, using the data `data_example_a` generated based on Figure (a). The function `ADMGtmle()` takes the following arguments:
   
 - `a`: a vector of length 2, specifying the values of treatment $A$ to compare. For example, `a=c(1,0)` compares causal effect under $A=1$ verse $A=0$.
 - `data`: a data frame containing the data.
@@ -70,7 +70,7 @@ The code below is an example of adopting SuperLearner with cross-fitting:
 
 ```{r, onestep-eg, warning=F, message=F, eval=F}
 
-est <- ADMGtmle(a=c(1,0),data=data_fig_4a, vertices=c('A','M','L','Y','X'),
+est <- ADMGtmle(a=c(1,0),data=data_example_a, vertices=c('A','M','L','Y','X'),
                 bi_edges=list(c('A','Y')),
                 di_edges=list(c('X','A'), c('X','M'), c('X','L'),c('X','Y'), c('M','Y'), c('A','M'), c('A','L'), c('M','L'), c('L','Y')),
                 treatment='A', outcome='Y',
@@ -93,7 +93,7 @@ The code below is an example of using the `dnorm` method for the density ratio e
 
 ```{r, tmle-eg, warning=F, message=F, eval=F}
 
-est <- ADMGtmle(a=c(1,0),data=data_fig_4a, vertices=c('A','M','L','Y','X'),
+est <- ADMGtmle(a=c(1,0),data=data_example_a, vertices=c('A','M','L','Y','X'),
                 bi_edges=list(c('A','Y')),
                 di_edges=list(c('X','A'), c('X','M'), c('X','L'),c('X','Y'), c('M','Y'), c('A','M'), c('A','L'), c('M','L'), c('L','Y')),
                 treatment='A', outcome='Y',
@@ -106,7 +106,7 @@ As an example, we `ADMGtmle()` to estimate the average counterfactual outcome $E
 
 ```{r, output, eval=F}
 
-est <- ADMGtmle(a=1,data=data_fig_4a, vertices=c('A','M','L','Y','X'),
+est <- ADMGtmle(a=1,data=data_example_a, vertices=c('A','M','L','Y','X'),
                 bi_edges=list(c('A','Y')),
                 di_edges=list(c('X','A'), c('X','M'), c('X','L'),c('X','Y'), c('M','Y'), c('A','M'), c('A','L'), c('M','L'), c('L','Y')),
                 treatment='A', outcome='Y',
