--- a/README.Rmd
+++ b/README.Rmd
@@ -13,20 +13,27 @@ The `flexCausal` R package enables estimation of Average Causal Effects (ACE) fo
 
 ![](background.png){width=100%}
 
-The package asks for the following **inputs** from the user:  
+<div style="border: 2px solid orange; padding: 10px; width: 95%; border-radius: 15px;margin-bottom: 20px;">
+  The package asks for the following **inputs** from the user:  
 - Dataset
 
 - Treatment and outcome specifications
 
 - ADMG (acyclic directed mixed graph), a projection of directed acyclic graphs (DAG) with latent variables. This can be based on expert knowledge, causal discovery methods, or a combination of both.
+</div>
+  
+  
 
+<div style="border: 2px solid orange; padding: 10px; width: 95%; border-radius: 15px;margin-bottom: 15px;">
 The package **outputs**:  
 - Whether the causal effect is identifiable
 
 - The estimated causal effect with confidence intervals (if the causal effect is identifiable under primal fixability criterion). Users can specify either one-step or TMLE estimators, or choose to use both. Additionally, they can select methods for nuisance parameter estimation, with SuperLearner set as the default.
 
 - An assessment of whether the specified ADMG is nonparametrically saturated, and if current estimates reach the semiparametric efficiency bounds.
-
+</div>
+  
+  
 Here's a schematic view of what `flexCausal` is capable of and how it works:
 
 
